--- a/Lessons/Lesson-12-Bootstrap/css/about-me.css
+++ b/Lessons/Lesson-12-Bootstrap/css/about-me.css
@@ -1,3 +1,33 @@
 .navbar-nav {
     font-size: 20px;
 }
+
+#header-jumbotron {
+    background-image: url("https://images4.alphacoders.com/115/1151249.jpg");
+    background-size: cover;
+    background-position: 0% 85%;
+    height: 200px;
+}
+
+#jumbotron-1-text {
+    font-weight: bold;
+    text-shadow: 2px 2px darkgray;
+    padding-top: 40px;
+}
+
+#about-me-container {
+    width: 75%;
+    background-color: silver;
+    border: solid 5px darkslategray;
+}
+
+#footer-jumbotron {
+    width: 100%;
+    height: 10vh;
+    background: silver;
+    border-top: solid 3px darkslategray;
+}
+
+#jumbotron-2-text {
+    padding-top: 40px;
+}
