--- a/Lessons/Lesson-12-Bootstrap/css/about-me.css
+++ b/Lessons/Lesson-12-Bootstrap/css/about-me.css
@@ -1,7 +1,3 @@
-.navbar-nav {
-    font-size: 20px;
-}
-
 #header-jumbotron {
     background-image: url("https://images4.alphacoders.com/115/1151249.jpg");
     background-size: cover;
@@ -9,14 +5,14 @@
     height: 200px;
 }
 
-#jumbotron-1-text {
-    font-weight: bold;
+#header-jumbotron-text {
     text-shadow: 2px 2px darkgray;
     padding-top: 40px;
 }
 
 #about-me-container {
     width: 75%;
+    margin-top: 40px;
     background-color: silver;
     border: solid 5px darkslategray;
 }
@@ -28,6 +24,6 @@
     border-top: solid 3px darkslategray;
 }
 
-#jumbotron-2-text {
+#footer-jumbotron-text {
     padding-top: 40px;
 }
