--- a/Lessons/Lesson-12-Bootstrap/css/about-me.css
+++ b/Lessons/Lesson-12-Bootstrap/css/about-me.css
@@ -27,3 +27,19 @@
 #footer-jumbotron-text {
     padding-top: 40px;
 }
+
+@media (max-width: 992px) {
+    #header-jumbotron-text {
+        padding-top: 50px;
+    }
+
+    #footer-jumbotron-text {
+        padding-top: 35px;
+    }
+}
+
+@media (max-width: 576px) {
+    #header-jumbotron-text {
+        padding-top: 60px;
+    }
+}
