--- a/Lessons/Lesson-12-Bootstrap/css/favorite-games.css
+++ b/Lessons/Lesson-12-Bootstrap/css/favorite-games.css
@@ -10,6 +10,13 @@
     padding-top: 40px;
 }
 
+#favorite-games-container {
+    width: 90%;
+    margin-top: 40px;
+    background-color: silver;
+    border: solid 5px darkslategray;
+}
+
 #footer-jumbotron {
     width: 100%;
     height: 10vh;
